--- a/.env
+++ b/.env
@@ -39,5 +39,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost
+# MAILER_DSN=gmail://YYY@gmail.com:XXXX@default? exemple de mailer
 ###< symfony/mailer ###
